--- a/test/dune
+++ b/test/dune
@@ -1,3 +1,3 @@
 (tests
- (names test_list test_avl test_pq test_map test_stack)
+ (names test_list test_avl test_pq test_map test_stack test_queue)
  (libraries algos))
